parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> LBRACE stmt_list RBRACE
Rule 3     stmt_list -> stmt_list statement
Rule 4     stmt_list -> statement
Rule 5     stmt_list -> <empty>
Rule 6     statement -> lvalue ASSIGN expr SEMI
Rule 7     statement -> PRINT LPAREN expr RPAREN SEMI
Rule 8     statement -> IF LPAREN expr RPAREN block
Rule 9     statement -> IF LPAREN expr RPAREN block ELSE block
Rule 10    statement -> WHILE LPAREN expr RPAREN block
Rule 11    statement -> block
Rule 12    lvalue -> NAME
Rule 13    lvalue -> expr LBRACK expr RBRACK
Rule 14    expr -> NAME
Rule 15    expr -> HASH INT LPAREN expr RPAREN
Rule 16    expr -> HASH INT LPAREN expr COMMA tuple_list RPAREN
Rule 17    expr -> INT
Rule 18    expr -> REAL
Rule 19    expr -> STRING
Rule 20    expr -> BOOL
Rule 21    expr -> LPAREN expr RPAREN
Rule 22    expr -> LPAREN expr COMMA RPAREN
Rule 23    expr -> LPAREN expr COMMA tuple_list RPAREN
Rule 24    tuple_list -> expr COMMA tuple_list
Rule 25    tuple_list -> expr
Rule 26    expr -> LBRACK RBRACK
Rule 27    expr -> LBRACK list_elements RBRACK
Rule 28    list_elements -> expr COMMA list_elements
Rule 29    list_elements -> expr
Rule 30    expr -> expr PLUS expr
Rule 31    expr -> expr MINUS expr
Rule 32    expr -> expr TIMES expr
Rule 33    expr -> expr EXP expr
Rule 34    expr -> expr DIV expr
Rule 35    expr -> expr INTDIV expr
Rule 36    expr -> expr MOD expr
Rule 37    expr -> expr ANDALSO expr
Rule 38    expr -> expr ORELSE expr
Rule 39    expr -> expr EQUALSTO expr
Rule 40    expr -> expr NOTEQUAL expr
Rule 41    expr -> expr LESSTHAN expr
Rule 42    expr -> expr LESSTHANEQUAL expr
Rule 43    expr -> expr GREATERTHAN expr
Rule 44    expr -> expr GREATERTHANEQUAL expr
Rule 45    expr -> expr CONS expr
Rule 46    expr -> expr IN expr
Rule 47    expr -> expr LBRACK expr RBRACK
Rule 48    expr -> NOT expr
Rule 49    expr -> MINUS expr

Terminals, with rules where they appear

ANDALSO              : 37
ASSIGN               : 6
BOOL                 : 20
COMMA                : 16 22 23 24 28
CONS                 : 45
DIV                  : 34
ELSE                 : 9
EQUALSTO             : 39
EXP                  : 33
GREATERTHAN          : 43
GREATERTHANEQUAL     : 44
HASH                 : 15 16
IF                   : 8 9
IN                   : 46
INT                  : 15 16 17
INTDIV               : 35
LBRACE               : 2
LBRACK               : 13 26 27 47
LESSTHAN             : 41
LESSTHANEQUAL        : 42
LPAREN               : 7 8 9 10 15 16 21 22 23
MINUS                : 31 49
MOD                  : 36
NAME                 : 12 14
NOT                  : 48
NOTEQUAL             : 40
ORELSE               : 38
PLUS                 : 30
PRINT                : 7
RBRACE               : 2
RBRACK               : 13 26 27 47
REAL                 : 18
RPAREN               : 7 8 9 10 15 16 21 22 23
SEMI                 : 6 7
STRING               : 19
TIMES                : 32
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

block                : 1 8 9 9 10 11
expr                 : 6 7 8 9 10 13 13 15 16 21 22 23 24 25 28 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49
list_elements        : 27 28
lvalue               : 6
program              : 0
statement            : 3 4
stmt_list            : 2 3
tuple_list           : 16 23 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 3

    program                        shift and go to state 1
    block                          shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> LBRACE . stmt_list RBRACE
    (3) stmt_list -> . stmt_list statement
    (4) stmt_list -> . statement
    (5) stmt_list -> .
    (6) statement -> . lvalue ASSIGN expr SEMI
    (7) statement -> . PRINT LPAREN expr RPAREN SEMI
    (8) statement -> . IF LPAREN expr RPAREN block
    (9) statement -> . IF LPAREN expr RPAREN block ELSE block
    (10) statement -> . WHILE LPAREN expr RPAREN block
    (11) statement -> . block
    (12) lvalue -> . NAME
    (13) lvalue -> . expr LBRACK expr RBRACK
    (2) block -> . LBRACE stmt_list RBRACE
    (14) expr -> . NAME
    (15) expr -> . HASH INT LPAREN expr RPAREN
    (16) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (17) expr -> . INT
    (18) expr -> . REAL
    (19) expr -> . STRING
    (20) expr -> . BOOL
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . LPAREN expr COMMA RPAREN
    (23) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (26) expr -> . LBRACK RBRACK
    (27) expr -> . LBRACK list_elements RBRACK
    (30) expr -> . expr PLUS expr
    (31) expr -> . expr MINUS expr
    (32) expr -> . expr TIMES expr
    (33) expr -> . expr EXP expr
    (34) expr -> . expr DIV expr
    (35) expr -> . expr INTDIV expr
    (36) expr -> . expr MOD expr
    (37) expr -> . expr ANDALSO expr
    (38) expr -> . expr ORELSE expr
    (39) expr -> . expr EQUALSTO expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr LESSTHAN expr
    (42) expr -> . expr LESSTHANEQUAL expr
    (43) expr -> . expr GREATERTHAN expr
    (44) expr -> . expr GREATERTHANEQUAL expr
    (45) expr -> . expr CONS expr
    (46) expr -> . expr IN expr
    (47) expr -> . expr LBRACK expr RBRACK
    (48) expr -> . NOT expr
    (49) expr -> . MINUS expr

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for HASH resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for LBRACK resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    RBRACE          reduce using rule 5 (stmt_list -> .)
    PRINT           shift and go to state 8
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    NAME            shift and go to state 13
    LBRACE          shift and go to state 3
    HASH            shift and go to state 15
    INT             shift and go to state 16
    REAL            shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 14
    NOT             shift and go to state 21
    MINUS           shift and go to state 20

  ! PRINT           [ reduce using rule 5 (stmt_list -> .) ]
  ! IF              [ reduce using rule 5 (stmt_list -> .) ]
  ! WHILE           [ reduce using rule 5 (stmt_list -> .) ]
  ! NAME            [ reduce using rule 5 (stmt_list -> .) ]
  ! LBRACE          [ reduce using rule 5 (stmt_list -> .) ]
  ! HASH            [ reduce using rule 5 (stmt_list -> .) ]
  ! INT             [ reduce using rule 5 (stmt_list -> .) ]
  ! REAL            [ reduce using rule 5 (stmt_list -> .) ]
  ! STRING          [ reduce using rule 5 (stmt_list -> .) ]
  ! BOOL            [ reduce using rule 5 (stmt_list -> .) ]
  ! LPAREN          [ reduce using rule 5 (stmt_list -> .) ]
  ! LBRACK          [ reduce using rule 5 (stmt_list -> .) ]
  ! NOT             [ reduce using rule 5 (stmt_list -> .) ]
  ! MINUS           [ reduce using rule 5 (stmt_list -> .) ]

    stmt_list                      shift and go to state 4
    statement                      shift and go to state 5
    lvalue                         shift and go to state 6
    expr                           shift and go to state 7
    block                          shift and go to state 11

state 4

    (2) block -> LBRACE stmt_list . RBRACE
    (3) stmt_list -> stmt_list . statement
    (6) statement -> . lvalue ASSIGN expr SEMI
    (7) statement -> . PRINT LPAREN expr RPAREN SEMI
    (8) statement -> . IF LPAREN expr RPAREN block
    (9) statement -> . IF LPAREN expr RPAREN block ELSE block
    (10) statement -> . WHILE LPAREN expr RPAREN block
    (11) statement -> . block
    (12) lvalue -> . NAME
    (13) lvalue -> . expr LBRACK expr RBRACK
    (2) block -> . LBRACE stmt_list RBRACE
    (14) expr -> . NAME
    (15) expr -> . HASH INT LPAREN expr RPAREN
    (16) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (17) expr -> . INT
    (18) expr -> . REAL
    (19) expr -> . STRING
    (20) expr -> . BOOL
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . LPAREN expr COMMA RPAREN
    (23) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (26) expr -> . LBRACK RBRACK
    (27) expr -> . LBRACK list_elements RBRACK
    (30) expr -> . expr PLUS expr
    (31) expr -> . expr MINUS expr
    (32) expr -> . expr TIMES expr
    (33) expr -> . expr EXP expr
    (34) expr -> . expr DIV expr
    (35) expr -> . expr INTDIV expr
    (36) expr -> . expr MOD expr
    (37) expr -> . expr ANDALSO expr
    (38) expr -> . expr ORELSE expr
    (39) expr -> . expr EQUALSTO expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr LESSTHAN expr
    (42) expr -> . expr LESSTHANEQUAL expr
    (43) expr -> . expr GREATERTHAN expr
    (44) expr -> . expr GREATERTHANEQUAL expr
    (45) expr -> . expr CONS expr
    (46) expr -> . expr IN expr
    (47) expr -> . expr LBRACK expr RBRACK
    (48) expr -> . NOT expr
    (49) expr -> . MINUS expr

    RBRACE          shift and go to state 22
    PRINT           shift and go to state 8
    IF              shift and go to state 10
    WHILE           shift and go to state 12
    NAME            shift and go to state 13
    LBRACE          shift and go to state 3
    HASH            shift and go to state 15
    INT             shift and go to state 16
    REAL            shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 14
    NOT             shift and go to state 21
    MINUS           shift and go to state 20

    statement                      shift and go to state 23
    lvalue                         shift and go to state 6
    expr                           shift and go to state 7
    block                          shift and go to state 11

state 5

    (4) stmt_list -> statement .

    RBRACE          reduce using rule 4 (stmt_list -> statement .)
    PRINT           reduce using rule 4 (stmt_list -> statement .)
    IF              reduce using rule 4 (stmt_list -> statement .)
    WHILE           reduce using rule 4 (stmt_list -> statement .)
    NAME            reduce using rule 4 (stmt_list -> statement .)
    LBRACE          reduce using rule 4 (stmt_list -> statement .)
    HASH            reduce using rule 4 (stmt_list -> statement .)
    INT             reduce using rule 4 (stmt_list -> statement .)
    REAL            reduce using rule 4 (stmt_list -> statement .)
    STRING          reduce using rule 4 (stmt_list -> statement .)
    BOOL            reduce using rule 4 (stmt_list -> statement .)
    LPAREN          reduce using rule 4 (stmt_list -> statement .)
    LBRACK          reduce using rule 4 (stmt_list -> statement .)
    NOT             reduce using rule 4 (stmt_list -> statement .)
    MINUS           reduce using rule 4 (stmt_list -> statement .)


state 6

    (6) statement -> lvalue . ASSIGN expr SEMI

    ASSIGN          shift and go to state 24


state 7

    (13) lvalue -> expr . LBRACK expr RBRACK
    (30) expr -> expr . PLUS expr
    (31) expr -> expr . MINUS expr
    (32) expr -> expr . TIMES expr
    (33) expr -> expr . EXP expr
    (34) expr -> expr . DIV expr
    (35) expr -> expr . INTDIV expr
    (36) expr -> expr . MOD expr
    (37) expr -> expr . ANDALSO expr
    (38) expr -> expr . ORELSE expr
    (39) expr -> expr . EQUALSTO expr
    (40) expr -> expr . NOTEQUAL expr
    (41) expr -> expr . LESSTHAN expr
    (42) expr -> expr . LESSTHANEQUAL expr
    (43) expr -> expr . GREATERTHAN expr
    (44) expr -> expr . GREATERTHANEQUAL expr
    (45) expr -> expr . CONS expr
    (46) expr -> expr . IN expr
    (47) expr -> expr . LBRACK expr RBRACK

    LBRACK          shift and go to state 25
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    EXP             shift and go to state 29
    DIV             shift and go to state 30
    INTDIV          shift and go to state 31
    MOD             shift and go to state 32
    ANDALSO         shift and go to state 33
    ORELSE          shift and go to state 34
    EQUALSTO        shift and go to state 35
    NOTEQUAL        shift and go to state 36
    LESSTHAN        shift and go to state 37
    LESSTHANEQUAL   shift and go to state 38
    GREATERTHAN     shift and go to state 39
    GREATERTHANEQUAL shift and go to state 40
    CONS            shift and go to state 41
    IN              shift and go to state 42


state 8

    (7) statement -> PRINT . LPAREN expr RPAREN SEMI

    LPAREN          shift and go to state 43


state 9

    (21) expr -> LPAREN . expr RPAREN
    (22) expr -> LPAREN . expr COMMA RPAREN
    (23) expr -> LPAREN . expr COMMA tuple_list RPAREN
    (14) expr -> . NAME
    (15) expr -> . HASH INT LPAREN expr RPAREN
    (16) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (17) expr -> . INT
    (18) expr -> . REAL
    (19) expr -> . STRING
    (20) expr -> . BOOL
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . LPAREN expr COMMA RPAREN
    (23) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (26) expr -> . LBRACK RBRACK
    (27) expr -> . LBRACK list_elements RBRACK
    (30) expr -> . expr PLUS expr
    (31) expr -> . expr MINUS expr
    (32) expr -> . expr TIMES expr
    (33) expr -> . expr EXP expr
    (34) expr -> . expr DIV expr
    (35) expr -> . expr INTDIV expr
    (36) expr -> . expr MOD expr
    (37) expr -> . expr ANDALSO expr
    (38) expr -> . expr ORELSE expr
    (39) expr -> . expr EQUALSTO expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr LESSTHAN expr
    (42) expr -> . expr LESSTHANEQUAL expr
    (43) expr -> . expr GREATERTHAN expr
    (44) expr -> . expr GREATERTHANEQUAL expr
    (45) expr -> . expr CONS expr
    (46) expr -> . expr IN expr
    (47) expr -> . expr LBRACK expr RBRACK
    (48) expr -> . NOT expr
    (49) expr -> . MINUS expr

    NAME            shift and go to state 45
    HASH            shift and go to state 15
    INT             shift and go to state 16
    REAL            shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 14
    NOT             shift and go to state 21
    MINUS           shift and go to state 20

    expr                           shift and go to state 44

state 10

    (8) statement -> IF . LPAREN expr RPAREN block
    (9) statement -> IF . LPAREN expr RPAREN block ELSE block

    LPAREN          shift and go to state 46


state 11

    (11) statement -> block .

    RBRACE          reduce using rule 11 (statement -> block .)
    PRINT           reduce using rule 11 (statement -> block .)
    IF              reduce using rule 11 (statement -> block .)
    WHILE           reduce using rule 11 (statement -> block .)
    NAME            reduce using rule 11 (statement -> block .)
    LBRACE          reduce using rule 11 (statement -> block .)
    HASH            reduce using rule 11 (statement -> block .)
    INT             reduce using rule 11 (statement -> block .)
    REAL            reduce using rule 11 (statement -> block .)
    STRING          reduce using rule 11 (statement -> block .)
    BOOL            reduce using rule 11 (statement -> block .)
    LPAREN          reduce using rule 11 (statement -> block .)
    LBRACK          reduce using rule 11 (statement -> block .)
    NOT             reduce using rule 11 (statement -> block .)
    MINUS           reduce using rule 11 (statement -> block .)


state 12

    (10) statement -> WHILE . LPAREN expr RPAREN block

    LPAREN          shift and go to state 47


state 13

    (12) lvalue -> NAME .
    (14) expr -> NAME .

    ASSIGN          reduce using rule 12 (lvalue -> NAME .)
    LBRACK          reduce using rule 14 (expr -> NAME .)
    PLUS            reduce using rule 14 (expr -> NAME .)
    MINUS           reduce using rule 14 (expr -> NAME .)
    TIMES           reduce using rule 14 (expr -> NAME .)
    EXP             reduce using rule 14 (expr -> NAME .)
    DIV             reduce using rule 14 (expr -> NAME .)
    INTDIV          reduce using rule 14 (expr -> NAME .)
    MOD             reduce using rule 14 (expr -> NAME .)
    ANDALSO         reduce using rule 14 (expr -> NAME .)
    ORELSE          reduce using rule 14 (expr -> NAME .)
    EQUALSTO        reduce using rule 14 (expr -> NAME .)
    NOTEQUAL        reduce using rule 14 (expr -> NAME .)
    LESSTHAN        reduce using rule 14 (expr -> NAME .)
    LESSTHANEQUAL   reduce using rule 14 (expr -> NAME .)
    GREATERTHAN     reduce using rule 14 (expr -> NAME .)
    GREATERTHANEQUAL reduce using rule 14 (expr -> NAME .)
    CONS            reduce using rule 14 (expr -> NAME .)
    IN              reduce using rule 14 (expr -> NAME .)


state 14

    (26) expr -> LBRACK . RBRACK
    (27) expr -> LBRACK . list_elements RBRACK
    (28) list_elements -> . expr COMMA list_elements
    (29) list_elements -> . expr
    (14) expr -> . NAME
    (15) expr -> . HASH INT LPAREN expr RPAREN
    (16) expr -> . HASH INT LPAREN expr COMMA tuple_list RPAREN
    (17) expr -> . INT
    (18) expr -> . REAL
    (19) expr -> . STRING
    (20) expr -> . BOOL
    (21) expr -> . LPAREN expr RPAREN
    (22) expr -> . LPAREN expr COMMA RPAREN
    (23) expr -> . LPAREN expr COMMA tuple_list RPAREN
    (26) expr -> . LBRACK RBRACK
    (27) expr -> . LBRACK list_elements RBRACK
    (30) expr -> . expr PLUS expr
    (31) expr -> . expr MINUS expr
    (32) expr -> . expr TIMES expr
    (33) expr -> . expr EXP expr
    (34) expr -> . expr DIV expr
    (35) expr -> . expr INTDIV expr
    (36) expr -> . expr MOD expr
    (37) expr -> . expr ANDALSO expr
    (38) expr -> . expr ORELSE expr
    (39) expr -> . expr EQUALSTO expr
    (40) expr -> . expr NOTEQUAL expr
    (41) expr -> . expr LESSTHAN expr
    (42) expr -> . expr LESSTHANEQUAL expr
    (43) expr -> . expr GREATERTHAN expr
    (44) expr -> . expr GREATERTHANEQUAL expr
    (45) expr -> . expr CONS expr
    (46) expr -> . expr IN expr
    (47) expr -> . expr LBRACK expr RBRACK
    (48) expr -> . NOT expr
    (49) expr -> . MINUS expr

    RBRACK          shift and go to state 48
    NAME            shift and go to state 45
    HASH            shift and go to state 15
    INT             shift and go to state 16
    REAL            shift and go to state 17
    STRING          shift and go to state 18
    BOOL            shift and go to state 19
    LPAREN          shift and go to state 9
    LBRACK          shift and go to state 14
    NOT             shift and go to state 21
    MINUS           shift and go to state 20

    list_elements                  shift and go to state 49
    expr                           shift and go to state 50

state 15

    (15) expr -> HASH . INT LPAREN expr RPAREN
    (16) expr -> HASH . INT LPAREN expr COMMA tuple_list RPAREN

    INT             shift and go to state 51


state 16

    (17) expr -> INT .

    LBRACK          reduce using rule 17 (expr -> INT .)
    PLUS            reduce using rule 17 (expr -> INT .)
    MINUS           reduce using rule 17 (expr -> INT .)
    TIMES           reduce using rule 17 (expr -> INT .)
    EXP             reduce using rule 17 (expr -> INT .)
    DIV             reduce using rule 17 (expr -> INT .)
    INTDIV          reduce using rule 17 (expr -> INT .)
    MOD             reduce using rule 17 (expr -> INT .)
    ANDALSO         reduce using rule 17 (expr -> INT .)
    ORELSE          reduce using rule 17 (expr -> INT .)
    EQUALSTO        reduce using rule 17 (expr -> INT .)
    NOTEQUAL        reduce using rule 17 (expr -> INT .)
    LESSTHAN        reduce using rule 17 (expr -> INT .)
    LESSTHANEQUAL   reduce using rule 17 (expr -> INT .)
    GREATERTHAN     reduce using rule 17 (expr -> INT .)
    GREATERTHANEQUAL reduce using rule 17 (expr -> INT .)
    CONS            reduce using rule 17 (expr -> INT .)
    IN              reduce using rule 17 (expr -> INT .)
    RPAREN          reduce using rule 17 (expr -> INT .)
    COMMA           reduce using rule 17 (expr -> INT .)
    RBRACK          reduce using rule 17 (expr -> INT .)
    SEMI            reduce using rule 17 (expr -> INT .)


state 17

    (18) expr -> REAL .

    LBRACK          reduce using rule 18 (expr -> REAL .)
    PLUS            reduce using rule 18 (expr -> REAL .)
    MINUS           reduce using rule 18 (expr -> REAL .)
    TIMES           reduce using rule 18 (expr -> REAL .)
    EXP             reduce using rule 18 (expr -> REAL .)
    DIV             reduce using rule 18 (expr -> REAL .)
    INTDIV          reduce using rule 18 (expr -> REAL .)
    MOD             reduce using rule 18 (expr -> REAL .)
    ANDALSO         reduce using rule 18 (expr -> REAL .)
    ORELSE          reduce using rule 18 (expr -> REAL .)
    EQUALSTO        reduce using rule 18 (expr -> REAL .)
    NOTEQUAL        reduce using rule 18 (expr -> REAL .)
    LESSTHAN        reduce using rule 18 (expr -> REAL .)
    LESSTHANEQUAL   reduce using rule 18 (expr -> REAL .)
    GREATERTHAN     reduce using rule 18 (expr -> REAL .)
    GREATERTHANEQUAL reduce using rule 18 (expr -> REAL .)
    CONS            reduce using rule 18 (expr -> REAL .)
    IN              reduce using rule 18 (expr -> REAL .)
    RPAREN          reduce using rule 18 (expr -> REAL .)
    COMMA           reduce using rule 18 (expr -> REAL .)
    RBRACK          reduce using rule 18 (expr -> REAL .)
    SEMI            reduce using rule 18 (expr -> REAL .)


state 18

    (19) expr -> STRING .
